@@ -116,13 +116,20 @@ return declare( SeqFeatureStore,
         endCallback();
     },
 
-    _makeFeature: function( data, parent ) {
+    _parseInt: function( data ) {
         array.forEach(['start','end','strand'], function( field ) {
             if( field in data )
                 data[field] = parseInt( data[field] );
         });
         if( 'score' in data )
             data.score = parseFloat( data.score );
+        if( 'subfeatures' in data )
+            for( var i=0; i<data.subfeatures.length; i++ )
+                this._parseInt( data.subfeatures[i] );
+    },
+
+    _makeFeature: function( data, parent ) {
+        this._parseInt( data );
         return new SimpleFeature( { data: data, parent: parent } );
     }
 });
